fix: use Collectors.toList() for Java 11 compatibility (#6)
Stream.toList() was introduced in Java 16, but the SDK targets Java 11.
This was causing compilation failures on Java 11:

  cannot find symbol
    symbol:   method toList()
    location: interface java.util.stream.Stream<PlanStep>